icon-theme: Use g_clear_* helpers in finalize

https://bugzilla.gnome.org/show_bug.cgi?id=709264